<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">VFaces</string>
    <string name="action_yes">Так</string>
    <string name="action_no">Ні</string>
    <string name="action_cancel">Скасувати</string>
    <string name="action_ok">Зрозуміло</string>
    <string name="no_network_message">Немає з\'єднання з Інтернетом</string>
    <string name="alert_dialog_exit_title">Вихід</string>
    <string name="alert_dialog_exit_msg">Ви дійсно хочете вийти зі свого профілю?</string>
    <string name="alert_dialog_exit_questionnaire_title">Призупинити анкету?</string>
    <string name="alert_dialog_exit_questionnaire_msg">Наповнення буде збережено.\nВи зможете
        продовжити пізніше.</string>
    <string name="alert_dialog_exit_questionnaire_not_completed_title">Блок запитань не заповнено</string>
    <string name="alert_dialog_exit_questionnaire_not_completed_msg">Щоб перейти до наступного блоку запитань
        спочатку необхідно заповнити поточний блок</string>
    <string name="alert_dialog_remove_questionnaire_title">Видалити анкету?</string>
    <string name="alert_dialog_remove_questionnaire_msg">Дані анкети буде втрачено</string>
    <string name="alert_dialog_back_questionnaire_title">Повернутися до попереднього блоку анкети?</string>
    <string name="alert_dialog_back_questionnaire_msg">Результат поточного блоку анкети буде втрачено</string>
    <string name="alert_dialog_back_to_list_questionnaire_title">Повернутися до списку анкет?</string>
    <string name="alert_dialog_back_to_list_questionnaire_msg">Результат поточного блоку анкети буде втрачено</string>
    <string name="alert_dialog_veteran_refused_questionnaire_title">Ветеран відмовився відповідати</string>
    <string name="alert_dialog_veteran_absent_questionnaire_title">Ветеран відсутній</string>
    <string name="alert_dialog_skip_questionnaire_msg">Анкету збережено</string>
    <string name="veteran_profile_logo_text">ПСИХОФІЗІОЛОГІЧНИЙ ПРОФІЛЬ\nУКРАЇНСЬКОГО ВЕТЕРАНА</string>
    <string name="save_text">Зберегти</string>
    <string name="wrong_email">Некоректний Email</string>
    <string name="wrong_password">Неправильний пароль</string>
    <string name="wrong_password_too_short_or_long">Довжина паролю повинна бути від 6 до 30 символів</string>
    <string name="wrong_password_characters">Пароль може містити лише латинські літери та/або цифри</string>
    <string name="email_not_confirmed">Ви не підтвердили Email</string>
    <string name="wrong_credentials">Неправильний Email або пароль</string>
    <string name="wrong_data_field">Некоректні дані</string>
    <string name="wrong_number">Номер повинен бути у форматі \'+380ХХХХХХХХХ\' або \'0ХХХХХХХХХ\'</string>
    <string name="wrong_number_too_short">Номен не повинен бути коротшим 10 символів</string>
    <string name="email_text">Email</string>
    <string name="password_text">Пароль</string>
    <string name="sign_in_text">Увійти</string>
    <string name="forget_password_text">Забули пароль?</string>
    <string name="sign_in_success">%s авторизовано</string>
    <string name="sign_in_error">Помилка під час авторизації. Будь ласка, спробуйте ще раз.</string>
    <string name="sign_in_wrong_credentials">Неправильні дані для входу. Будь ласка, перевірте та спробуйте ще раз.</string>
    <string name="sign_in_verify_email">Для успішного входу необхідно підтвердити Email адресу Вашого профілю.</string>
    <string name="sign_up_prompt">Немає профілю соціального працівника?</string>
    <string name="sign_up_text">Зареєструватися</string>
    <string name="sign_up_title">Реєстрація</string>
    <string name="sign_up_successful">Реєстрація успішна!</string>
    <string name="sign_up_verify_email">Для завершення необхідно підтвердити\nВашу Email адресу.\n\nІнструкцію з підтвердження було надіслано на\n%s.
    </string>
    <string name="sign_up_success">%s успішно зареєстровано</string>
    <string name="sign_up_email_collision">На жаль Email %s вже зайнятий. Буль ласка, спробуйте інший.</string>
    <string name="sign_up_error">Помилка під час реєстрації. Будь ласка, спробуйте ще раз.</string>
    <string name="reset_password_prompt">Для відновлення нам потрібна Email адреса\nВашого профілю.\n
        \nНа неї ми надішлемо Вам інструкцію\nз відновлення паролю.
    </string>
    <string name="reset_password_text">Відновити пароль</string>
    <string name="reset_password_invalid_email">Некоректний Email. Будь ласка, перевірте та спробуйте ще раз.</string>
    <string name="reset_password_success">Інструкцію з відновлення паролю було надіслано\nна %s.</string>
    <string name="reset_password_error">Помилка під час відновлення паролю. Будь ласка, спробуйте ще раз.</string>
    <string name="reset_password_done">Зрозуміло</string>
    <string name="back_text">Назад</string>
    <string name="profile_title">Профіль працівника</string>
    <string name="profile_my_title">Мій профіль</string>
    <string name="profile_fill_prompt">*Будь ласка, вводьте Ваші справжні дані.</string>
    <string name="profile_name">ПІБ</string>
    <string name="profile_work">Місце роботи</string>
    <string name="profile_phone_number">Моб. телефон</string>
    <string name="profile_select_work_error">Будь ласка, оберіть місце роботи</string>
    <string name="profile_save_success">Профіль працівника успішно збережено</string>
    <string name="profile_save_error">Помилка під час збереження профілю. Будь ласка, спробуйте ще раз.</string>
    <string name="profile_get_error">Помилка під час отримання профілю. Будь ласка, спробуйте ще раз.</string>
    <string-array name="profile_organisations_list">
        <item>Оберіть місце роботи</item>
        <item>Волонтер проекту</item>
        <item>Ватутінський міський центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Канівський міський центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Смілянський міський центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Смілянський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Уманська міська рада, Управління праці та соціального захисту населення</item>
        <item>Уманський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Черкаський міський центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Черкаський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Золотоніський район,Територіальний Центр надання соціальних послуг</item>
        <item>Золотоніський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Городищенський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Драбівський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Жашківський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Звенигородський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Канівський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Катеринопільський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Кам’янський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Корсунь-Шевченківський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Лисянський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Маньківський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Монастирищенський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Тальнівський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Христинівський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Чигиринський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Чорнобаївський районний центр соціальних служб для сім’ї, дітей та молоді</item>
        <item>Шполянський районний центр соціальних служб для сім’ї, дітей та молоді</item>
    </string-array>
    <string name="profile_prompt_title">Профіль працівника</string>
    <string name="profile_prompt_fill_text">Щоб почати працювати з анкетами необхідно заповнити
        \nпрофіль соціального працівника.</string>
    <string name="profile_prompt_fill_profile">Заповнити профіль</string>
    <string name="profile_prompt_switch_account">Змінити акаунт</string>
    <string name="navigation_drawer_questionnaires">Анкети</string>
    <string name="navigation_drawer_questionnaire_main">Ветеранів</string>
    <string name="navigation_drawer_questionnaire_additional">Сімей загиблих</string>
    <string name="navigation_drawer_profile">Мій профіль</string>
    <string name="navigation_drawer_exit">Вийти</string>
    <string name="questionnaire_list_title">Анкети ветеранів</string>
    <string name="questionnaire_list_family_title">Анкети членів сім\'ї загиблого</string>
    <string name="questionnaire_list_no_items_message">Наразі у Вас ще немає анкет.\n\nЩоб мати можливість працювати
        з\nанкетами необхідно розпочати соціальне опитування.
    </string>
    <string name="questionnaire_list_load_error">Помилка під час завантаження анкет</string>
    <string name="questionnaire_list_delete_error">Помилка під час видалення анкети</string>
    <string name="questionnaire_list_menu_sort">Сортування</string>
    <string name="questionnaire_list_menu_default">За датою</string>
    <string name="questionnaire_list_menu_not_finished">Незаповнені</string>
    <string name="questionnaire_list_menu_name">ПІБ</string>
    <string name="questionnaire_list_menu_settlement">Населений пункт</string>
    <string name="questionnaire_list_menu_progress">Наповнення</string>
    <string name="questionnaire_list_item_name">Іваненко Іван Іванович</string>
    <string name="questionnaire_list_item_settlement">Київ</string>
    <string name="questionnaire_list_item_status">Статус</string>
    <string name="questionnaire_list_item_status_refused">Відмовився</string>
    <string name="questionnaire_list_item_status_absent">Відсутній</string>
    <string name="questionnaire_list_item_last_edit">Останні зміни: </string>
    <string name="questionnaire_list_item_options_edit">Редагувати</string>
    <string name="questionnaire_list_item_options_delete">Видалити</string>
    <string name="new_questionnaire_main_title">Анкета ветерана</string>
    <string name="new_questionnaire_additional_title">Анкета сім\'ї загиблого</string>
    <string name="new_questionnaire_edit_title">Редагування анкети</string>
    <string name="new_questionnaire_current_page">%s/%s</string>
    <string name="new_questionnaire_action_back"><![CDATA[<< Назад]]></string>
    <string name="new_questionnaire_action_next"><![CDATA[Далі >>]]></string>
    <string name="new_questionnaire_action_finish">Завершити</string>
    <string name="new_questionnaire_action_back_to_list">До списку анкет</string>
    <string name="new_questionnaire_save_success">Блок запитань збережено</string>
    <string name="new_questionnaire_save_error">Не вдалося зберегти блок запитань</string>
    <string name="completed_questionnaire_title">Анкету збережено</string>
    <string name="completed_questionnaire_completed_prompt">Анкету для\n%s\nбуло успішно збережено.
        \n\nДля керування анкетами\nнеобхідно повернутися до\nсписку всіх анкет.</string>
    <string name="completed_questionnaire_back_to_questionnaire">Попернутися до списку</string>
    <string name="privacy_policy_title">Політика конфіденційності</string>
    <string name="privacy_policy_decline">Відхилити</string>
    <string name="privacy_policy_accept">Прийняти</string>
</resources>