<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_filter_list"
        android:orderInCategory="1"
        android:title="@string/questionnaire_list_menu_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_one"
                android:title="@string/questionnaire_list_menu_default" />
            <item
                android:id="@+id/action_two"
                android:title="@string/questionnaire_list_menu_not_finished" />
            <item
                android:id="@+id/action_three"
                android:title="@string/questionnaire_list_menu_name" />
            <item
                android:id="@+id/action_four"
                android:title="@string/questionnaire_list_menu_settlement" />
            <item
                android:id="@+id/action_five"
                android:title="@string/questionnaire_list_menu_progress" />
        </menu>
    </item>
</menu>