<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_name"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/profile_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_name"
            style="@style/TextInputEditTextStyle"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_phone_number"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/profile_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_phone_number"
            style="@style/TextInputEditTextStyle"
            android:imeOptions="actionDone"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_work"
        style="@style/SpinnerStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_profile"
        style="@style/MaterialButtonStyle"
        android:text="@string/save_text" />

</LinearLayout>