<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".presentation.ui.auth.profile.ProfilePromptFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/profile_prompt_title"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/text_view_verify_email_prompt"
        style="@style/RegularTextViewStyleMedium"
        android:text="@string/profile_prompt_fill_text"
        app:layout_constraintBottom_toTopOf="@+id/button_fill_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_fill_profile"
        style="@style/MaterialButtonStyle"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/profile_prompt_fill_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ua.gov.mva.vfaces.view.UnderlineableTextView
            android:id="@+id/text_view_switch_account"
            style="@style/UnderlineableClickableTextViewStyle"
            android:text="@string/profile_prompt_switch_account"
            app:layout_constraintBottom_toTopOf="@+id/image_view_minvet_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_fill_profile" />

    <ImageView
        android:id="@+id/image_view_minvet_logo"
        style="@style/ImageViewMinvetLogoStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>