<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.ui.auth.AuthHostActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:ignore="ContentDescription">

        <include
            android:id="@+id/logo"
            layout="@layout/veteran_profile_logo_layout" />

        <TextView
            android:id="@+id/forget_pass_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_padding_large"
            android:text="@string/forget_password_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorYellow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/text_view_reset_pass_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_padding_large"
            android:gravity="center"
            android:text="@string/reset_password_prompt"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_pass_prompt" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_reset_password"
            style="@style/MaterialCardViewStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_reset_pass_prompt">

            <include layout="@layout/forgot_password_layout" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_view_reset_success_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_padding_large"
            android:gravity="center"
            android:text="@string/reset_password_success"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_done"
            style="@style/MaterialButtonStyle"
            android:text="@string/reset_password_done"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_reset_success_prompt" />

        <ua.gov.mva.vfaces.view.UnderlineableTextView
            android:id="@+id/text_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_padding_large"
            android:text="@string/back_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorYellow"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/image_view_minvet_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_reset_password" />

        <ImageView
            android:id="@+id/image_view_minvet_logo"
            android:layout_width="@dimen/auth_logo_minvet_width"
            android:layout_height="@dimen/auth_logo_minvet_height"
            android:src="@drawable/ic_logo_minvet_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>